src/test/resources/parse/DuplicateMut.out
error: Duplicate `mut` keyword
--> ./DuplicateMut.casc:1:0
1 | mut mut class DuplicateMut
    ^^^= hint: Encountered first one here
2 |
error: Duplicate `mut` keyword
--> ./DuplicateMut.casc:1:4
1 | mut mut class DuplicateMut
        ^^^= hint: Duplicate here
2 |
error: Duplicate `mut` keyword
--> ./DuplicateMut.casc:4:4
3 | impl DuplicateMut {
4 |     mut mut fn a1(self) {}
        ^^^= hint: Encountered first one here
5 | }
error: Duplicate `mut` keyword
--> ./DuplicateMut.casc:4:8
3 | impl DuplicateMut {
4 |     mut mut fn a1(self) {}
            ^^^= hint: Duplicate here
5 | }