src/test/resources/parse/DuplicateMut.casc
mut mut class DuplicateMut

impl DuplicateMut {
    mut mut fn a1(self) {}
}